--- a/ksl_watcher.css
+++ b/ksl_watcher.css
@@ -1,13 +1,14 @@
-a {
-	font: bold 11px Arial;
-	text-decoration: none;
-	background-color: #EEEEEE;
+.button {
+  	font: bold 11px Arial;
+  	text-decoration: none;
+	background-color: #FFFFFF;
 	color: #333333;
 	padding: 2px 6px 2px 6px;
 	border-top: 1px solid #CCCCCC;
 	border-right: 1px solid #333333;
 	border-bottom: 1px solid #333333;
 	border-left: 1px solid #CCCCCC;
+	border-radius: 3pt;
 }
 
 .nice-box {
@@ -19,4 +20,14 @@ a {
 	padding-left: 10px;
 	padding-right: 10px;
 	border-radius: 25px;
+}
+
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
+
+.header {
+	
+
 }
